--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
